<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/attendee_header"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_entry_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Let's Get Started!"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/attendee_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendee_header"
        tools:context=".AttendeeProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editAttendeeProfileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AttendeeProfileFragment">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/add_photo_draw_foreground"
                app:backgroundTint="@color/add_photo_draw_background"
                app:layout_constraintBottom_toBottomOf="@+id/image_view"
                app:layout_constraintEnd_toEndOf="@+id/image_view" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/delete_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="@drawable/delete_photo_draw_foreground"
                app:backgroundTint="@color/delete_photo_draw_background"

                app:layout_constraintEnd_toEndOf="@+id/image_view"
                app:layout_constraintTop_toTopOf="@+id/image_view" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="104dp"
                android:background="@color/profile_photo_background"

                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circle"
                app:strokeColor="@android:color/darker_gray"
                app:strokeWidth="5dp" />

            <EditText
                android:id="@+id/edit_attendee_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attendee_first_name_label" />

            <EditText
                android:id="@+id/edit_attendee_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attendee_last_name_label" />

            <EditText
                android:id="@+id/edit_attendee_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attendee_email_label" />

            <EditText
                android:id="@+id/edit_attendee_home_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/home_page"
                android:inputType="text"
                android:maxLength="100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/attendee_home_page_label" />

            <CheckBox
                android:id="@+id/edit_attendee_location_box"
                android:layout_width="248dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:text="@string/access_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_attendee_email" />

            <Button
                android:id="@+id/profile_entry_finish_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/finish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_attendee_location_box"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_entry_continue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/continue_text"
                android:background="@drawable/button_background"
                android:textColor="@color/button_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_attendee_location_box"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/attendee_first_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.295"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/attendee_last_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/last_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.294"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_attendee_first_name" />

            <TextView
                android:id="@+id/attendee_home_page_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/home_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.298"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_attendee_last_name" />

            <TextView
                android:id="@+id/attendee_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.268"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_attendee_home_page" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>