...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_container"/>

    <ImageButton
        android:id="@+id/admin_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:foregroundTint="#FFFFFF"
        android:padding="8sp"
        android:src="@drawable/home_32px"
...
        app:layout_constraintBottom_toTopOf="@id/fragment_container"
        app:layout_constraintStart_toStartOf="@+id/admin_header"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/admin_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:foregroundTint="#FFFFFF"
        android:padding="8sp"
        android:src="@drawable/outline_arrow_back_ios_new_24"
...
