<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_admin_profiles">

    <ListView
        android:id="@+id/profilesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>